Modify predicate keyword list construction
keywordsLists used in predicate constructors are now completely immutable.